# portfolio

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  _redirects  compose.yaml  compose.yml  config.example.toml  config.toml  dev.yaml  entrypoint.sh  images.py  marastatic.py  prod.yaml  pyproject.toml  requirements.dev.txt  requirements.txt  tailwind
base/: blocks.py  models.py
base/migrations/: 0001_initial.py  0002_staticpage.py  0003_contactemailsettings.py  0004_footersettings_content.py  0005_footersettings_location.py  0006_footertextsettings_sitesettings_socialmediasettings_and_more.py  0007_delete_contactemailsettings_and_more.py  0008_contactemailsettings_homepage.py  0009_alter_homepage_widgets.py  0010_alter_contactemailsettings_options_and_more.py  0011_sitesettings_author_name.py  0012_homepage_og_image.py  0013_alter_homepage_widgets.py  0014_alter_homepage_widgets.py
base/templatetags/: navigation_tags.py
blog/: custom_blocks.py  feeds.py  models.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_blogpostpage_body.py  0003_alter_blogpostpage_body.py  0004_alter_blogpostpage_body.py  0005_alter_blogpostpage_body.py  0006_blogpostpage_date.py
compose/dev/: Dockerfile
compose/prod/: Dockerfile
content/: _redirects  about.md  index.md
content/blog/: change-django-admin-url.md  index.md  single-file-ssg-marastatic.md  (+2 more)
core/: asgi.py  cms_plugins.py  models.py  settings.py  urls.py  wsgi.py
home/: models.py
portfolio/: settings.py  urls.py  views.py  wsgi.py
projects/: models.py
templates/: 404.html  500.html  about.html  base.html  error.html  home.html  index.html  macros.html  minimal.html  robots.txt  sitemap.xml
(+99 files in other folders)
