[project]
name = "portfolio"
version = "1.1.0"
description = "A personal portfolio made with Django and Wagtail."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "django>=5.1.1",
  "environs>=11.0.0",
  "wagtail-bakery>=0.8.0",
  "wagtail>=6.2.1",
]

[tool.uv]
dev-dependencies = ["commitizen>=3.29.1", "djhtml>=3.0.6", "ruff>=0.6.9"]

[tool.ruff.lint]
ignore = ["F401", "F403"]
