[project]
name = "portfolio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0.2",
    "django-cms>=5.0.6",
    "django-filer>=3.4.4",
    "django-sekizai>=4.1.0",
    "djangocms-admin-style>=3.3.1",
    "djangocms-alias>=3.0.3",
    "djangocms-text>=0.9.3",
    "djangocms-versioning>=2.5.1",
]

[dependency-groups]
dev = [
    "commitizen>=4.13.9",
    "djhtml>=3.0.10",
    "prek>=0.3.4",
    "ruff>=0.15.4",
]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "uv"
update_changelog_on_bump = true
major_version_zero = true
